[gd_scene load_steps=2 format=3 uid="uid://cfk1r4sulqjtx"]

[ext_resource type="Script" path="res://ui/screens/character_select/character_select_button.gd" id="1_bbmwp"]

[node name="CharacterSelectButton" type="Button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -15.5
offset_right = 32.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.952941, 0.8, 0.231373, 1)
text = "SELECT"
script = ExtResource("1_bbmwp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -64.0
offset_right = 64.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = -61.0
offset_right = 49.0
offset_bottom = -38.0
theme_override_font_sizes/font_size = 8
text = "placeholder"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
